Fix link colors & current_ee_undergrads link

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <style>
-    a {
+    #uw_nav_link {
         color: gold;
     }
 </style>
 <body>
 <nav class="navbar navbar-expand-lg" style="background-color: indigo;">
-    <a class="navbar-brand" href="#">ECE Advisor</a>
+    <a class="navbar-brand" id="uw_nav_link" href="#">ECE Advisor</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,26 +18,26 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="uw_nav_link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="uw_nav_link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Students
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/student_info/">Student Info</a>
-            <a class="dropdown-item" href="#">Future Placeholder</a>
+            <a class="dropdown-item" href="/#">Future Placeholder</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/current_ee_undergrads">All EE Undergrads</a>
+            <a class="dropdown-item" href="/current_ee_undergrads/">All EE Undergrads</a>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="uw_nav_link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Faculty
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/fac_crs_history/">Faculty Course History</a>
-              <a class="dropdown-item" href="/faculty_code">Faculty Code Search</a>
+              <a class="dropdown-item" href="/faculty_code/">Faculty Code Search</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="/faculty_list/">Faculty List</a>
           </div>
