Added Course to the navbar and removed redundant links

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -20,6 +20,7 @@
         <li class="nav-item active">
           <a class="nav-link" id="uw_nav_link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
+        <!-- STUDENTS MENU-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="uw_nav_link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Students
@@ -31,6 +32,7 @@
             <a class="dropdown-item" href="/current_ee_undergrads/">All EE Undergrads</a>
           </div>
         </li>
+        <!-- FACULTY MENU-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="uw_nav_link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Faculty
@@ -40,6 +42,22 @@
               <a class="dropdown-item" href="/faculty_code/">Faculty Code Search</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="/faculty_list/">Faculty List</a>
+          </div>
+        </li>
+        <!-- COURSES MENU-->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="uw_nav_link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Courses
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/course_info/">Single Course Information</a>
+              <a class="dropdown-item" href="/course_history/">Course History</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/joint_courses/">Joint Courses Information</a>
+              <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing">Shared Graduate Controls Courses Sheet</a>
+              <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/10jmuvcsF0VRj008C3CCY4ImOicnbI2nwteR5yql_jDE/edit?usp=sharing">Stephanie's Historical Enrollment Sheet</a>
+              <a class="dropdown-item" href="https://www.ece.uw.edu/wp-content/uploads/2020/12/ABET-Major-Concentration-Areas-Chart-12.10.2020.pdf">Concentrations Chart</a>
+              <a class="dropdown-item" href="https://vannevar.ece.uw.edu/operations/advising/advising_tools/EE_Courses_Prereq_Tree.drawio.html">Prerequisite Flowchart</a>
           </div>
         </li>
         <li class="nav-item">
