--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -64,8 +64,8 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" action="/student_info/">
+        <input class="form-control mr-sm-2" id="sid" name="sid" aria-label="Search" placeholder="SID or Email">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
