--- a/templates/courses/joint_courses.html
+++ b/templates/courses/joint_courses.html
@@ -1,9 +1,6 @@
-<html>
-<head>
-    <title>Joint Courses</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
-<body>
+{% extends "shared/base.html" %}
+{% block title %}Course Info{% endblock %}
+{% block body %}
     <div class="container-fluid">
         <div>
             <p><a href="/">Menu</a></p>
@@ -32,5 +29,5 @@
             </table>
         </div>
     </div>
-</body>
+{% endblock %}
 </html>
