Updated concntration areas chart link

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -56,7 +56,7 @@
               <a class="dropdown-item" href="/joint_courses/">Joint Courses Information</a>
               <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing">Shared Graduate Controls Courses Sheet</a>
               <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/10jmuvcsF0VRj008C3CCY4ImOicnbI2nwteR5yql_jDE/edit?usp=sharing">Stephanie's Historical Enrollment Sheet</a>
-              <a class="dropdown-item" href="https://www.ece.uw.edu/wp-content/uploads/2020/12/ABET-Major-Concentration-Areas-Chart-12.10.2020.pdf">Concentrations Chart</a>
+              <a class="dropdown-item" href="https://www.ece.uw.edu/wp-content/uploads/2022/02/Concentration-Areas-Chart-W2022.pdf">Concentrations Chart</a>
               <a class="dropdown-item" href="https://vannevar.ece.uw.edu/operations/advising/advising_tools/EE_Courses_Prereq_Tree.drawio.html">Prerequisite Flowchart</a>
           </div>
         </li>
