added census day enrollment numbers

--- a/templates/courses/course_history.html
+++ b/templates/courses/course_history.html
@@ -37,7 +37,8 @@
                         <th>Room</th>
                         <th>Start</th>
                         <th>End</th>
-                        <th>Enrolled</th>
+                        <th>Enr_10</th>
+                        <th>Enr_End</th>
                         <th>Limit</th>
                         <th>Denied</th>
                         <th>Added</th>
