fixed 'title' block

--- a/templates/faculty/faculty_crs_history.html
+++ b/templates/faculty/faculty_crs_history.html
@@ -1,5 +1,5 @@
 {% extends "shared/base.html" %}
-{% block title %}Student Info{% endblock %}
+{% block title %}ulty History{% endblock %}
 {% block body %}
     <div class="container-fluid">
         <div>
