--- a/templates/courses/course_info.html
+++ b/templates/courses/course_info.html
@@ -36,7 +36,7 @@ block body %}
           <li>Soc. Science: {{ soc_sci }}</li>
           <li>Arts. Hum.: {{ arts_hum }}</li>
           <li>Reasoning: {{ rsn }}</li>
-          <li>Eng. Comp: {{ enl_comp }}</li>
+          <li>Eng. Comp: {{ engl_comp }}</li>
           <li>Writing: {{ writing }}</li>
         </ul>
       </div>
