--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -7,7 +7,8 @@
             <ul>
                 <li><a href="https://sdb.admin.uw.edu/sisdepttools/securid/TSconstrovr.aspx" target="_blank">Time Schedule Construction</a></li>
                 <li><a href="https://sdb.admin.uw.edu/depttools/securID/tsupdate.asp" target="_blank">Time Schedule Update</a></li>
-                <li><a href="https://registrar.washington.edu/classrooms/time-schedule-production-calendar-2022-2023/" target="_blank">2022-2023 Time Schedule Production Calendar</a></li>
+                <li><a href="https://registrar.washington.edu/classrooms/time-schedule-production-calendar-2023-2024/" target="_blank">2023-2024 Time Schedule Production Calendar</a></li>
+                <li><a href="https://registrar.washington.edu/classrooms/time-schedule-production-calendar-2024-2025/" target="_blank">2024-2025 Time Schedule Production Calendar</a></li>
                 <li><a href="https://www.washington.edu/students/timeschd/WIN2023/ee.html" target="_blank">Current Time Schedule</a></li>
                 <li><a href="https://www.washington.edu/students/timeschd/SPR2023/ee.html" target="_blank">Upcoming Time Schedule</a></li>
                 <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
@@ -25,11 +26,11 @@
             </ul>
             <li class="listHeader"><h6>Helpful Links</h6></li>
             <ul>
-                <li><a href="https://www.washington.edu/students/reg/2223cal.html#Q2" target="_blank">2022-2023 Academic Calendar</a></li>
                 <li><a href="https://www.washington.edu/students/reg/2324cal.html#Q2" target="_blank">2023-2024 Academic Calendar</a></li>
-                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsp23/" target="_blank">Spr 2023 Registration Priority</a></li>
-                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsu23/" target="_blank">Sum 2023 Registration Priority</a></li>
-                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorau23/" target="_blank">Aut 2023 Registration Priority</a></li>
+                <li><a href="https://www.washington.edu/students/reg/2425cal.html#Q2" target="_blank">2024-2025 Academic Calendar</a></li>
+                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorwi24/" target="_blank">Win 2024 Registration Priority</a></li>
+                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsp24/" target="_blank">Spr 2024 Registration Priority</a></li>
+                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsu24/" target="_blank">Sum 2024 Registration Priority</a></li>
             </ul>
         </ul>
     </div>
